empresa-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: empresa-a
spec:
  selector:
    app: empresa-a
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
